# Progetto-Sistemi-Operativi

./: .gitignore  CMakeLists.txt  client.c  common.c  common.h  flake.nix  meson.build  server.c
inc/: common.h  semaphores.h
src/: client.c  common.c  semaphores.c  server.c
